--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: [The title of your site]
-description: [A short description of your site's purpose]
+description: Patrik Kaufman and John Shamory \n Virginia Tech
