--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: [The title of your site]
+title: Document Scanning with Image Preservation and OCR
 description: Patrik Kaufman and John Shamory <p> Virginia Tech </p>
